# gi-test

./: .clang-format  gir-test.c  gir-test.gdb  main.c  meson.build  my-hello.c  my-hello.h  my-title.h
gir/: gir.c
python/: hello.py  hello.sh
